# ArUco-Detec-Autonomous

./: ARUCO_COMPLETE_GUIDE.md  ARUCO_QUICK_START.md  CMakeLists.txt  LOGGING_FEATURE.md  README.md  README_ARUCO.md  README_FACE_BLUR.md  aruco_menu.sh  generate_aruco.py  run_aruco.sh  start_autonomous.sh  view_log.py
autonomous_system/: AUTONOMOUS_QUICK_START.md  FILE_ORGANIZATION.md  GETTING_STARTED.txt  NAVIGATION_STRATEGY.md  QUICK_REFERENCE.txt  README.md  README_AUTONOMOUS.md  SYSTEM_OVERVIEW.md  config_ip_camera.sh  main_menu.sh  run_autonomous.sh
config/: rover_config.yaml
docs/: CALIBRATION_GUIDE.md  NEW_FEATURES_BLACK_AND_BOUNDARY.md  PROGRAMMER_NEXT_STEPS.md  ROVER_INTEGRATION.md
scripts/: run_rover.sh  setup_bluetooth.sh
src/: aruco_detection.cpp  autonomous_aruco.cpp  autonomous_rover.cpp  camp.cpp  cobaa.cpp  face_blur_detection.cpp  serial_transport.cpp  serial_transport.hpp
